tests/fixtures/errors/invalid_preproc_builtin_in_assert.puml
@startuml
!assert %nosuchbuiltin() : unknown builtin must surface deterministic diagnostic
Alice -> Bob: unreachable
@enduml
